// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MostRead should render with ltr most read with correct dir 1`] = `
.c9 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 0.5rem;
}

.c9:hover,
.c9:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c8 {
  padding-top: 6px;
  padding-bottom: 1.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

.c10 {
  padding-top: 0.5rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

.c4 {
  position: relative;
}

.c7 {
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 300;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  position: relative;
  color: #B80000;
  margin: 0;
  padding: 0;
}

.c2 {
  list-style-type: none;
  margin: 0;
  padding: 0;
  grid-auto-flow: column;
  grid-template-rows: repeat( 5,[col-start] auto [col-end] );
}

.c0 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 1.25rem;
  line-height: 1.5rem;
  color: #3F3F42;
}

@supports (display:grid) {
  .c1 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c3 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c3 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c3 {
    width: calc(20%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c9 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c9 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c8 {
    padding-right: 0;
  }
}

@media (max-width:14.9375rem) {
  .c6 {
    min-width: 2rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c6 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c6 {
    min-width: 3rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c6 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c6 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c11 {
    min-width: 2rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c11 {
    min-width: 3rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c11 {
    min-width: 4rem;
  }
}

@media (min-width:80rem) {
  .c11 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c12 {
    min-width: 2rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c12 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c12 {
    min-width: 3rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c12 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c12 {
    min-width: 4.25rem;
  }
}

@media (max-width:14.9375rem) {
  .c13 {
    min-width: 2rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c13 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c13 {
    min-width: 3rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c13 {
    min-width: 4rem;
  }
}

@media (min-width:80rem) {
  .c13 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c14 {
    min-width: 2rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c14 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c14 {
    min-width: 3rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c14 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c14 {
    min-width: auto;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c7 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

@media (max-width:37.4375rem) {
  .c2 {
    grid-template-rows: repeat( 10,[col-start] auto [col-end] );
  }
}

@media (min-width:80rem) {
  .c2 {
    grid-auto-flow: row;
    grid-template-rows: repeat( 5,[col-start] auto [col-end] );
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

<section
  aria-labelledby="most-read-title"
  class=""
  role="region"
>
   
  <h2
    class="c0"
    dir="ltr"
    id="most-read-title"
  >
    Most Read
  </h2>
  <ol
    class="c1 c2"
    dir="ltr"
    role="list"
  >
    <li
      class="c3 c4"
      dir="ltr"
      role="listitem"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <span
            class="c7"
          >
            1
          </span>
        </div>
        <div
          class="c8"
          dir="ltr"
        >
          <a
            class="c9"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
          <div
            class="c10"
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c4"
      dir="ltr"
      role="listitem"
    >
      <div
        class="c5"
      >
        <div
          class="c11"
          dir="ltr"
        >
          <span
            class="c7"
          >
            2
          </span>
        </div>
        <div
          class="c8"
          dir="ltr"
        >
          <a
            class="c9"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
          <div
            class="c10"
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c4"
      dir="ltr"
      role="listitem"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
          dir="ltr"
        >
          <span
            class="c7"
          >
            3
          </span>
        </div>
        <div
          class="c8"
          dir="ltr"
        >
          <a
            class="c9"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
          <div
            class="c10"
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c4"
      dir="ltr"
      role="listitem"
    >
      <div
        class="c5"
      >
        <div
          class="c11"
          dir="ltr"
        >
          <span
            class="c7"
          >
            4
          </span>
        </div>
        <div
          class="c8"
          dir="ltr"
        >
          <a
            class="c9"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
          <div
            class="c10"
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c4"
      dir="ltr"
      role="listitem"
    >
      <div
        class="c5"
      >
        <div
          class="c12"
          dir="ltr"
        >
          <span
            class="c7"
          >
            5
          </span>
        </div>
        <div
          class="c8"
          dir="ltr"
        >
          <a
            class="c9"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
          <div
            class="c10"
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c4"
      dir="ltr"
      role="listitem"
    >
      <div
        class="c5"
      >
        <div
          class="c13"
          dir="ltr"
        >
          <span
            class="c7"
          >
            6
          </span>
        </div>
        <div
          class="c8"
          dir="ltr"
        >
          <a
            class="c9"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
          <div
            class="c10"
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c4"
      dir="ltr"
      role="listitem"
    >
      <div
        class="c5"
      >
        <div
          class="c14"
          dir="ltr"
        >
          <span
            class="c7"
          >
            7
          </span>
        </div>
        <div
          class="c8"
          dir="ltr"
        >
          <a
            class="c9"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
          <div
            class="c10"
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c4"
      dir="ltr"
      role="listitem"
    >
      <div
        class="c5"
      >
        <div
          class="c13"
          dir="ltr"
        >
          <span
            class="c7"
          >
            8
          </span>
        </div>
        <div
          class="c8"
          dir="ltr"
        >
          <a
            class="c9"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
          <div
            class="c10"
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c4"
      dir="ltr"
      role="listitem"
    >
      <div
        class="c5"
      >
        <div
          class="c14"
          dir="ltr"
        >
          <span
            class="c7"
          >
            9
          </span>
        </div>
        <div
          class="c8"
          dir="ltr"
        >
          <a
            class="c9"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
          <div
            class="c10"
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c4"
      dir="ltr"
      role="listitem"
    >
      <div
        class="c5"
      >
        <div
          class="c13"
          dir="ltr"
        >
          <span
            class="c7"
          >
            10
          </span>
        </div>
        <div
          class="c8"
          dir="ltr"
        >
          <a
            class="c9"
            href="https://www.bbc.com/news/articles/cn7k01xp8kxo"
          >
            Could a computer ever create better art than a human?
          </a>
          <div
            class="c10"
          />
        </div>
      </div>
    </li>
  </ol>
   
</section>
`;

exports[`MostRead should render with rtl most read with correct dir 1`] = `
.c9 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 0.5rem;
}

.c9:hover,
.c9:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c8 {
  padding-top: 6px;
  padding-bottom: 1.5rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

.c10 {
  padding-top: 0.5rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

.c4 {
  position: relative;
}

.c7 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 2rem;
  line-height: 2.25rem;
  position: relative;
  color: #B80000;
  margin: 0;
  padding: 0;
}

.c2 {
  list-style-type: none;
  margin: 0;
  padding: 0;
  grid-auto-flow: column;
  grid-template-rows: repeat( 5,[col-start] auto [col-end] );
}

.c0 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 1.5rem;
  line-height: 2.125rem;
  color: #3F3F42;
}

@supports (display:grid) {
  .c1 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c3 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c3 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    width: calc(100%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    width: calc(50%);
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c3 {
    width: calc(20%);
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c9 {
    font-size: 1.625rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c9 {
    font-size: 1.75rem;
    line-height: 2.25rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c8 {
    padding-left: 0;
  }
}

@media (max-width:14.9375rem) {
  .c6 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c6 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c6 {
    min-width: 2.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c6 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c6 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c11 {
    min-width: 2.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c11 {
    min-width: 4rem;
  }
}

@media (min-width:80rem) {
  .c11 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c12 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c12 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c12 {
    min-width: 2.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c12 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c12 {
    min-width: 3.75rem;
  }
}

@media (max-width:14.9375rem) {
  .c13 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c13 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c13 {
    min-width: 2.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c13 {
    min-width: 4rem;
  }
}

@media (min-width:80rem) {
  .c13 {
    min-width: auto;
  }
}

@media (max-width:14.9375rem) {
  .c14 {
    min-width: 2.5rem;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c14 {
    min-width: 2.5rem;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c14 {
    min-width: 2.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:80rem) {
  .c14 {
    min-width: auto;
  }
}

@media (min-width:80rem) {
  .c14 {
    min-width: auto;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c7 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

@media (max-width:37.4375rem) {
  .c2 {
    grid-template-rows: repeat( 10,[col-start] auto [col-end] );
  }
}

@media (min-width:80rem) {
  .c2 {
    grid-auto-flow: row;
    grid-template-rows: repeat( 5,[col-start] auto [col-end] );
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 2rem;
    line-height: 2.375rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 2.25rem;
    line-height: 3.125rem;
  }
}

<section
  aria-labelledby="most-read-title"
  class=""
  role="region"
>
   
  <h2
    class="c0"
    dir="rtl"
    id="most-read-title"
  >
    الأكثر قراءة
  </h2>
  <ol
    class="c1 c2"
    dir="rtl"
    role="list"
  >
    <li
      class="c3 c4"
      dir="rtl"
      role="listitem"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
          dir="rtl"
        >
          <span
            class="c7"
          >
            ۱
          </span>
        </div>
        <div
          class="c8"
          dir="rtl"
        >
          <a
            class="c9"
            href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
          >
            لماذا يخجل البعض من اسم قريته في مصر؟
          </a>
          <div
            class="c10"
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c4"
      dir="rtl"
      role="listitem"
    >
      <div
        class="c5"
      >
        <div
          class="c11"
          dir="rtl"
        >
          <span
            class="c7"
          >
            ۲
          </span>
        </div>
        <div
          class="c8"
          dir="rtl"
        >
          <a
            class="c9"
            href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
          >
            لماذا يخجل البعض من اسم قريته في مصر؟
          </a>
          <div
            class="c10"
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c4"
      dir="rtl"
      role="listitem"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
          dir="rtl"
        >
          <span
            class="c7"
          >
            ۳
          </span>
        </div>
        <div
          class="c8"
          dir="rtl"
        >
          <a
            class="c9"
            href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
          >
            لماذا يخجل البعض من اسم قريته في مصر؟
          </a>
          <div
            class="c10"
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c4"
      dir="rtl"
      role="listitem"
    >
      <div
        class="c5"
      >
        <div
          class="c11"
          dir="rtl"
        >
          <span
            class="c7"
          >
            ۴
          </span>
        </div>
        <div
          class="c8"
          dir="rtl"
        >
          <a
            class="c9"
            href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
          >
            لماذا يخجل البعض من اسم قريته في مصر؟
          </a>
          <div
            class="c10"
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c4"
      dir="rtl"
      role="listitem"
    >
      <div
        class="c5"
      >
        <div
          class="c12"
          dir="rtl"
        >
          <span
            class="c7"
          >
            ۵
          </span>
        </div>
        <div
          class="c8"
          dir="rtl"
        >
          <a
            class="c9"
            href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
          >
            لماذا يخجل البعض من اسم قريته في مصر؟
          </a>
          <div
            class="c10"
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c4"
      dir="rtl"
      role="listitem"
    >
      <div
        class="c5"
      >
        <div
          class="c13"
          dir="rtl"
        >
          <span
            class="c7"
          >
            ۶
          </span>
        </div>
        <div
          class="c8"
          dir="rtl"
        >
          <a
            class="c9"
            href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
          >
            لماذا يخجل البعض من اسم قريته في مصر؟
          </a>
          <div
            class="c10"
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c4"
      dir="rtl"
      role="listitem"
    >
      <div
        class="c5"
      >
        <div
          class="c14"
          dir="rtl"
        >
          <span
            class="c7"
          >
            ۷
          </span>
        </div>
        <div
          class="c8"
          dir="rtl"
        >
          <a
            class="c9"
            href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
          >
            لماذا يخجل البعض من اسم قريته في مصر؟
          </a>
          <div
            class="c10"
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c4"
      dir="rtl"
      role="listitem"
    >
      <div
        class="c5"
      >
        <div
          class="c13"
          dir="rtl"
        >
          <span
            class="c7"
          >
            ۸
          </span>
        </div>
        <div
          class="c8"
          dir="rtl"
        >
          <a
            class="c9"
            href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
          >
            لماذا يخجل البعض من اسم قريته في مصر؟
          </a>
          <div
            class="c10"
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c4"
      dir="rtl"
      role="listitem"
    >
      <div
        class="c5"
      >
        <div
          class="c14"
          dir="rtl"
        >
          <span
            class="c7"
          >
            ۹
          </span>
        </div>
        <div
          class="c8"
          dir="rtl"
        >
          <a
            class="c9"
            href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
          >
            لماذا يخجل البعض من اسم قريته في مصر؟
          </a>
          <div
            class="c10"
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c4"
      dir="rtl"
      role="listitem"
    >
      <div
        class="c5"
      >
        <div
          class="c13"
          dir="rtl"
        >
          <span
            class="c7"
          >
            ۱۰
          </span>
        </div>
        <div
          class="c8"
          dir="rtl"
        >
          <a
            class="c9"
            href="https://www.bbc.com/arabic/articles/c1er5mjnznzo"
          >
            لماذا يخجل البعض من اسم قريته في مصر؟
          </a>
          <div
            class="c10"
          />
        </div>
      </div>
    </li>
  </ol>
   
</section>
`;
